# LidarAug

./: .clang-format  .dockerignore  .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  Makefile  NOTICE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-docker-image.yml  build-module.yml  google-test.yml  main.yml
LidarAug/: __init__.py  augmentation.py  transformations.cpp  transformations.pyi
LidarAug.egg-info/: PKG-INFO  SOURCES.txt
LidarAug/cpp/: CMakeLists.txt  Makefile  build.sh
LidarAug/cpp/include/: bindings.hpp  label.hpp  point_cloud.hpp  roiware_utils.h  stats.hpp  tensor.hpp  transformation_bindings.hpp  transformations.hpp  utils.hpp  weather.hpp  weather_bindings.hpp
LidarAug/cpp/src/: transformations.cpp  weather.cpp
LidarAug/cpp/test/: test.cpp
LidarAug/python/: __init__.py  transformations.py
cpp/: CMakeLists.txt
cpp/include/: evaluation.hpp  evaluation_bindings.cpp  evaluation_bindings.hpp  label.hpp  point_cloud.hpp  point_cloud_bindings.hpp  raytracing.hpp  roiware_utils.h  stats.hpp  tensor.hpp  transformation_bindings.hpp  transformations.hpp  utils.hpp  weather.hpp  weather_bindings.hpp
cpp/include/transformations/: transformation_bindings.hpp  transformations.hpp
cpp/include/weather_simulations/: weather.hpp  weather_bindings.hpp
cpp/src/: evaluation.cpp  raytracing.cpp  tensor.cpp  transformations.cpp  utils.cpp  weather.cpp
cpp/src/transformations/: CMakeLists.txt  transformations.cpp
cpp/src/weather_simulations/: CMakeLists.txt  weather.cpp
cpp/test/: test.cpp
docs/: conf.py  index.rst  requirements.txt
docs/sources/: modules.rst
docs/sources/api/: lidar_aug.python.rst  lidar_aug.rst  modules.rst
docs/sources/usage/: quickstart.rst
pytest/: pytest.ini  test.py
pytest/all_frames/: test_evaluation_all_framesCar.pkl  test_evaluation_all_framesCyc.pkl  test_evaluation_all_framesPedestrian.pkl
pytest/data/: test_evaluation_all_framesCyc.pkl
pytest/data/npz/: test.npz
pytest/data/pkl/: test_evaluation_all_framesCar.pkl  test_evaluation_all_framesPedestrian.pkl
src/LidarAug/: __init__.py  evaluation.pyi  point_cloud.pyi  transformations.pyi  weather_simulations.pyi
src/LidarAug/python/: augmentations.py  transformations.py  utils.py
src/lidar_aug/: evaluation.pyi  transformations.pyi  weather_simulations.pyi
src/lidar_aug/python/: augmentations.py  utils.py
