[build-system]
requires = [
    "setuptools==69.5.1",
    "pybind11>=2.10.0",
    "torch==2.1.0",
    "numpy==1.24.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "LidarAug"
version = "0.0.1"
dependencies = [
    "torch==2.1.0",
    "numpy==1.24.0",
]

# target-version = "py37"
